--- a/app/package.json
+++ b/app/package.json
@@ -7,14 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "npm run build && vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-typesafe-i18n": "workspace:../lib",
-    "typesafe-i18n": "^5.26.1",
-    "valibot": "^0.12.0"
+    "valibot": "^0.13.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
