--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,6 +19,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
+		"types": ["vite/client"],
 		"paths": {
 			"@/lib": ["./src/lib-import.ts"]
 		}
