--- a/lib/package.json
+++ b/lib/package.json
@@ -1,8 +1,19 @@
 {
   "name": "react-typesafe-i18n",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "description": "",
-  "keywords": [],
+  "keywords": [
+    "react",
+    "typescript",
+    "typesafe",
+    "internationalization",
+    "i18n",
+    "translation",
+    "localization",
+    "internationalization library",
+    "localization library",
+    "localization engine"
+  ],
   "license": "MIT",
   "author": "Florian Stemmler",
   "repository": {
@@ -14,10 +25,9 @@
   "module": "dist/index.mjs",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "default": "./dist/index.d.ts"
+      "import": "./dist/index.mjs"
     },
     "./internal": {
       "types": "./dist/internal.d.ts",
@@ -38,20 +48,20 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "release": "pnpm run build && esno scripts/bump.ts && bumpp --no-push"
+    "release": "pnpm run build && esno scripts/bump.ts && bumpp --no-push",
+    "trace": "tsc --generateTrace trace && pnpm --package=@typescript/analyze-trace dlx analyze-trace ./trace"
   },
   "peerDependencies": {
-    "react": "18.x",
-    "typesafe-i18n": "^5.2.3"
+    "react": "18.x"
   },
   "dependencies": {
     "react": "18.2.0",
-    "typesafe-i18n": "^5.2.3",
-    "valibot": "^0.12.0"
+    "valibot": "^0.13.1"
   },
   "devDependencies": {
     "@types/node": "^16.0.12",
     "@types/react": "18.2.15",
+    "typesafe-i18n": "5.26.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
