--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "pnpm --filter app run dev",
     "build": "pnpm --filter react-typesafe-i18n run build",
+    "check": "pnpm --filter react-typesafe-i18n run check",
+    "preview": "pnpm --filter app run preview",
     "test": "pnpm --filter react-typesafe-i18n run test",
     "test:ui": "pnpm --filter react-typesafe-i18n run test:ui"
   },
@@ -17,5 +19,10 @@
   "engines": {
     "node": ">=16",
     "pnpm": ">=8"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "typesafe-i18n@5.26.2": "patches/typesafe-i18n@5.26.2.patch"
+    }
   }
 }
