Fix dependency's, improve dependabot config dependabot now uses labels to differentiate between lib and app, it also should group some of the dependency's of lib

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,33 +4,45 @@ updates:
     directory: /
     schedule:
       interval: weekly
-  
+
   - package-ecosystem: npm
     directory: /app
     schedule:
       interval: weekly
     target-branch: dev
-    commit-message:
-      prefix: '[app] '
-  
+    labels:
+      - "app"
+
   - package-ecosystem: npm
     directory: /lib
     schedule:
       interval: daily
-    commit-message:
-      prefix: '[lib] '
+    labels:
+      - "lib"
     allow:
       - dependency-type: development
     ignore:
-      - dependency-name: '@types/node'
-      - dependency-name: '@types/react'
+      - dependency-name: "@types/node"
+      - dependency-name: "@types/react"
       - dependency-name: typesafe-i18n
-  
+      - dependency-name: typescript
+    groups:
+      vite:
+        patterns:
+          - "vite*"
+        exclude-patterns:
+          - "*plugin-react*"
+      vitest:
+        patterns:
+          - "*vitest*"
+      eslint:
+        patterns:
+          - "*eslint*"
+
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: weekly
     allow:
+      - dependency-type: development
       - dependency-name: prettier
-    ignore:
-      - dependency-name: typescript
