--- a/lib/package.json
+++ b/lib/package.json
@@ -61,7 +61,6 @@
   "devDependencies": {
     "@types/node": "^16.0.12",
     "@types/react": "18.2.15",
-    "typesafe-i18n": "5.26.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-react": "^4.0.4",
@@ -73,6 +72,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "typesafe-i18n": "5.26.2",
+    "typescript": "5.0.2",
     "utility-types": "^3.10.0",
     "vite": "^4.4.9",
     "vite-plugin-dts": "^3.5.3",
