--- a/lib/package.json
+++ b/lib/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "prettier": "3.0.2",
     "typesafe-i18n": "5.26.2",
     "typescript": "5.0.2",
     "utility-types": "^3.10.0",
