--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -6,5 +6,5 @@
 		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true
 	},
-	"include": ["vite.config.ts", "./language-server.ts"]
+	"include": ["vite.config.ts", "./language-server.ts", "./src/i18n/async/async.ts"]
 }
