Formatters can be set now, added html tag manipulation component, updated and improved Readme, fixed Detector async set, fixed langData not being typesafe

--- a/lib/package.json
+++ b/lib/package.json
@@ -29,6 +29,11 @@
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     },
+    "./formatters": {
+      "types": "./dist/formatters.d.ts",
+      "require": "./dist/formatters.js",
+      "import": "./dist/formatters.mjs"
+    },
     "./internal": {
       "types": "./dist/internal.d.ts",
       "require": "./dist/internal.js",
