--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,18 @@
 	"editor.formatOnSave": true,
 	"editor.tabSize": 2,
 	"editor.indentSize": "tabSize",
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/CVS": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		/* "lib/": true,
+		"app/": true */
+	},
+	"explorerExclude.backup": {},
 	//"editor.formatOnType": true,
-	"eslint.workingDirectories": ["./lib", "./app"],
-	"typescript.tsdk": "lib\\node_modules\\typescript\\lib"
+	/* "eslint.workingDirectories": ["./lib", "./app"],
+	"typescript.tsdk": "lib\\node_modules\\typescript\\lib" */
 }
